--- a/cleaned/_includes/head.html
+++ b/cleaned/_includes/head.html
@@ -7,7 +7,7 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <meta name="keywords" content="{{ site.config.keywords }}">
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/style/style.css">
   <link rel="canonical" href="{{ page.url | prepend: ' - ' | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }} RSS feed" href="/feed.xml">
 </head>
