fix default font and heading sizes

--- a/style/style.sass
+++ b/style/style.sass
@@ -15,11 +15,12 @@ img
   width: 100%
 
 body
+  font-family: Tahoma, sans-serif
   max-width: $body
   margin: 0 auto
 
 .navheader
-  margin-bottom: 1em
+  margin-bottom: 2em
   display: table
   border: 0
   div
@@ -37,7 +38,11 @@ body
         width: 100vw
       padding: 0 1em 0 1em
 
-h1, ul
+ul
+  margin-top: 0
+
+h1
+  font-size: 1.5em
   margin-top: 0
 
 h2
@@ -77,6 +82,7 @@ nav
   ul
     padding-left: 1.5em
   li
+    font-size: 0.75em
     list-style-image: url(/style/n1.gif)
 
 div.page
