factor out header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,8 @@
 <header>
+<div class="navheader">
+<div>Im<br>BGZ Süderelbe</div>
+<div><img src="/img/kulturhaus.jpg"></div>
+</div>
 
 <nav>
 {% assign pages = site.pages | sort: 'url' %}
@@ -6,10 +10,10 @@
 {% for p in pages %}
 {% if p.dir == '/' or p.name == 'index.md' %}
 <li><a href="{{ p.url }}">{{ p.title }}</a></li>
-{% if p.url == page.url %}
+{% if p.url == page.url or p.dir == page.dir and page.dir != '/' %}
 <ul>
 {% for d in site.pages %}
-{% if page.dir == d.dir and page.dir != '/' and page.name != d.name %}
+{% if page.dir == d.dir and page.dir != '/' and d.name != 'index.md' %}
 <li><a href="{{ d.url }}">{{ d.title }}</a></li>
 {% endif %}
 {% endfor %}
@@ -19,7 +23,4 @@
 {% endfor %}
 </ul>
 </nav>
-
-<hr>
-
 </header>
