add header image title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
 <div class="navheader">
 <div>Im<br>BGZ Süderelbe</div>
-<div><img src="/img/kulturhaus.jpg"></div>
+<div><img alt="Kulturhaus Süderelbe" title="Kulturhaus Süderelbe" src="/img/kulturhaus.jpg"></div>
 </div>
 
 <nav>
