--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,12 @@
 <header>
 <div class="navheader">
-<div>Im<br>BGZ Süderelbe</div>
+<div>
+<p><strong>Im BGZ Süderelbe</strong><br>Direkt neben dem S-Bahnhof Neugraben<p>
+<p>Am Johannisland 2<br>
+21147 Hamburg<br>
+Tel. 7967222
+</p>
+</div>
 <div><img alt="Kulturhaus Süderelbe" title="Kulturhaus Süderelbe" src="/img/kulturhaus.jpg"></div>
 </div>
 
