--- a/style/style.sass
+++ b/style/style.sass
@@ -4,10 +4,10 @@
 *
   box-sizing: border-box
 
-$nav: 15em
+$nav: 17em
 $body: 60em
 $yellow: #eed435
-$orange: #eb6724
+$red: rgb(205,23,25)
 $grey: #666666
 $device-break: 50em
 
@@ -18,39 +18,47 @@ body
   font-family: Tahoma, sans-serif
   max-width: $body
   margin: 0 auto
+  background-color: $yellow
+  @media screen and (min-width: $device-break)
+    padding-right: 2em
 
 .navheader
-  margin-bottom: 2em
   display: table
   border: 0
   div
-    border-top: 0.7em solid $orange
     display: table-cell
-    vertical-align: middle
     &:first-child
       @media screen and (max-width: $device-break)
         display: none
+      vertical-align: top
       background-color: $yellow
       width: $nav
-      padding: 0 4em 0 4em
+      padding: 1em 2em 0 2em
     &:last-child
       @media screen and (max-width: $device-break)
         width: 100vw
-      padding: 0 1em 0 1em
+      padding: 0 2em 0 2em
+      background-color: white
 
 ul
   margin-top: 0
 
-h1
-  font-size: 1.5em
+h2
+  font-size: 1.25em
   margin-top: 0
 
-h2
-  color: $orange
-  font-size: 1.25em
+h1
+  font-size: 1.5em
+  padding-top: 1em
+  padding-left: 2em
+  margin-left: -2em
+  border-top: 1em solid $yellow
+  &:first-child
+    margin-top: 0
+    border: none
 
 h5
-  background-color: yellow
+  background-color: $yellow
   padding: 0.5em
   font-size: 1em
 
@@ -70,24 +78,37 @@ a
   &:visited
     color: $grey
   &:hover
-    color: $orange
+    color: $red
 
 nav
+  a
+    color: black
+    text-decoration: none
+    &:visited
+      color: black
+    &:hover
+      color: $red
   @media screen and (min-width: $device-break)
     float: left
     width: $nav
-    padding-right: 1em
+    padding-right: 2em
+    padding-top: 4.5em // should start below first heading
+    background-color: $yellow
   @media screen and (max-width: $device-break)
     margin: 1em
+    padding-right: 1em
   ul
-    padding-left: 1.5em
+    padding-left: 2em
   li
-    font-size: 0.75em
-    list-style-image: url(/style/n1.gif)
+    list-style-type: none
+    margin-bottom: 1.5em
 
 div.page
+  background-color: white
   @media screen and (min-width: $device-break)
     margin-left: $nav
+    padding: 2em
+    padding-top: 1em
   @media screen and (max-width: $device-break)
-    margin: 1em
+    padding: 1em
 
