rename files and introduce navigation ordering

--- a/style/style.sass
+++ b/style/style.sass
@@ -33,7 +33,7 @@ body
       vertical-align: top
       background-color: $yellow
       width: $nav
-      padding: 1em 2em 0 2em
+      padding: 1em 1.5em 0 2em
     &:last-child
       @media screen and (max-width: $device-break)
         width: 100vw
@@ -52,6 +52,8 @@ h1
   padding-top: 1em
   padding-left: 2em
   margin-left: -2em
+  padding-right: 2em
+  margin-right: -2em
   border-top: 1em solid $yellow
   &:first-child
     margin-top: 0
