--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,10 +11,14 @@ Tel. 7967222
 </div>
 
 <nav>
-{% assign pages = site.pages | sort: 'url' %}
 <ul>
+{% assign pages = site.pages %}
+{% assign navigation = site.data.navigation %}
+{% for n in navigation %}
+{% assign name = n | append: ".md" %}
 {% for p in pages %}
-{% if p.dir == '/' or p.name == 'index.md' %}
+{% assign dir = p.dir | remove: '/' %}
+{% if p.name == 'index.md' and dir == n %}
 <li><a href="{{ p.url }}">{{ p.title }}</a></li>
 {% if p.url == page.url or p.dir == page.dir and page.dir != '/' %}
 <ul>
@@ -26,6 +30,10 @@ Tel. 7967222
 </ul>
 {% endif %}
 {% endif %}
+{% if p.dir == '/' and p.name == name %}
+<li><a href="{{ p.url }}">{{ p.title }}</a></li>
+{% endif %}
+{% endfor %}
 {% endfor %}
 </ul>
 </nav>
