keep small images small

--- a/style/style.sass
+++ b/style/style.sass
@@ -12,7 +12,10 @@ $grey: #666666
 $device-break: 50em
 
 img
-  width: 100%
+  max-width: 100%
+  display: inline-block
+  vertical-align: middle
+  padding: 1em
 
 body
   font-family: Tahoma, sans-serif
