--- a/style/style.sass
+++ b/style/style.sass
@@ -14,7 +14,8 @@ $device-break: 50em
 img
   max-width: 100%
   max-height: 50vh
-  margin: 0 auto
+  padding: 0.5em 1em 0.5em 0
+  vertical-align: middle
 
 body
   font-family: Tahoma, sans-serif
