--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,30 +11,6 @@ Tel. 7967222
 </div>
 
 <nav>
-<ul>
-{% assign pages = site.pages %}
-{% assign navigation = site.data.navigation %}
-{% for n in navigation %}
-{% assign name = n | append: ".md" %}
-{% for p in pages %}
-{% assign dir = p.dir | remove: '/' %}
-{% if p.name == 'index.md' and dir == n %}
-<li><a href="{{ p.url }}">{{ p.title }}</a></li>
-{% if p.url == page.url or p.dir == page.dir and page.dir != '/' %}
-<ul>
-{% for d in site.pages %}
-{% if page.dir == d.dir and page.dir != '/' and d.name != 'index.md' %}
-<li><a href="{{ d.url }}">{{ d.title }}</a></li>
-{% endif %}
-{% endfor %}
-</ul>
-{% endif %}
-{% endif %}
-{% if p.dir == '/' and p.name == name %}
-<li><a href="{{ p.url }}">{{ p.title }}</a></li>
-{% endif %}
-{% endfor %}
-{% endfor %}
-</ul>
+{% include navigation.html dir='/' %}
 </nav>
 </header>
