mobile navigation hervorgehoben

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,9 +7,10 @@
 Tel. 7967222
 </p>
 </div>
-<div><img alt="Kulturhaus Süderelbe" title="Kulturhaus Süderelbe" src="/img/kulturhaus.jpg"></div>
+<div>
+<img alt="Kulturhaus Süderelbe" title="Kulturhaus Süderelbe" src="/img/kulturhaus.jpg">
 </div>
-
+</div>
 <nav>
 {% include navigation.html dir='/' %}
 </nav>
