--- a/style/style.sass
+++ b/style/style.sass
@@ -108,6 +108,9 @@ nav
       color: black
     &:hover
       color: $red
+  .current
+    @media screen and (max-width: $device-break)
+      font-size: $h1-size
   @media screen and (min-width: $device-break)
     float: left
     width: $nav
